2009-04-29  Jorge Gonzalez  <jorgegonz@artica.es>

	* install.php: fixed typos.

2009-04-29  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated spanish
	translation.

	* include/languages/index.pot: Updated po template.

	* godmode/admin_access_logs.php,
	godmode/agentes/module_manager_editor.php: changed the separator
	character to &raquo;

	* godmode/reporting/map_builder.php: removed dirty characters at the
	begining.

	* godmode/agentes/planned_downtime.php: modified a i18n string.

2009-04-24  Esteban Sánchez  <estebans@artica.es>

	* godmode/agentes/module_manager.php: Added extra parameter to
	enterprise_hook call.
	
	* include/functions_modules.php: Added get_network_component_group_name()
	
2009-04-24  Manuel Arostegui <marostegui@artica.es>

	* operation/agentes/status_monitor.php: Fixed bug #2779382

2009-04-24  Esteban Sánchez  <estebans@artica.es>

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Removed local components table
	
	* godmode/servers/manage_recontask_form.php: Added "any" option to
	operating system combo.
	
	* godmode/snmpconsole/snmp_alert.php: Changed alert templates with actions.

2009-04-23  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/graph_viewer.php, godmode/setup/news.php,
	  godmode/agentes/planned_downtime.php,
	  godmode/modules/manage_network_components.php,
	  godmode/modules/manage_nc_groups.php,
	  godmode/reporting/map_builder.php: Fixed strings to make them
	  standard for translation.

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated PO template.

2009-04-22  Manuel Arostegui <marostegui@artica.es>

	* godmode/servers/manage_recontask_form.php: Fixed bug #2777351

2009-04-22  Manuel Arostegui <marostegui@artica.es>

	* godmode/menu.php: Fixed bug #2770383

2009-04-22  Jorge Gonzalez  <jorgegonz@artica.es>
